samples/_failures_safe/1761538251_5e5ce8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c46da24c.c: In function ‘main’:
./samples/SAFE/__tmp_c46da24c.c:166:16: error: missing terminating " character
  166 |         printf("Invalid
      |                ^~~~~~~~
./samples/SAFE/__tmp_c46da24c.c:166:9: error: expected expression at end of input
  166 |         printf("Invalid
      |         ^~~~~~
./samples/SAFE/__tmp_c46da24c.c:166:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c46da24c.c:166:9: error: expected declaration or statement at end of input
